tests/snapshots/assets__check_file@tests-assets-unit-whitespace-ws-in-array.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/whitespace/ws-in-array.typ
---
#(
  1,
  2,
  
  3,
  4,
  
  
  
  5,
  6,
)
