tests/snapshots/assets__check_file@typstfmt-100-email.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/100-email.typ
---
user\@host.TLD
