tests/snapshots/assets__check_file@typstfmt-100-email.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/typstfmt/100-email.typ
snapshot_kind: text
---
user\@host.TLD
