tests/snapshots/assets__check_file@typstfmt-113-math-indent.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/113-math-indent.typ
---
$
EE_(i_k ~ "Unif"({1,...,d}))[f(x x_(k+1)) - f(x x_k)]
  &<= sum_(i=1)^d 1 / d (delta nabla_i f(x_k) + L_i / 2 delta^2) \
  &= 1 / d sum_(i=1)^d (-alpha_i_k nabla_i f(x_k)^2 + alpha^2_i_k L_i / 2 nabla_i f(x_k)^2) \
  &= 1 / d sum_(i=1)^d (-alpha_i_k + alpha^2_i_k L_i / 2) nabla_i f(x_k)^2 \
$
