tests/snapshots/assets__check_file@typstfmt-124-block-comment.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/124-block-comment.typ
snapshot_kind: text
---
#let test(
  ..args,
) = (
  // do something
)

#test(
  a: "test test test test test",
  b: "test test test test test",
)[
  /* test */
  test test test test test test test test test test test test test test test test test test test test test test test test
][
  /* test */
  test test test test test test test test test test test test test test test test test test test test test test test test
][
  /* test */
  test test test test test test test test test test test test test test test test test test test test test test test test
]
